--- a/mbdyn/base/Makefile.am
+++ b/mbdyn/base/Makefile.am
@@ -238,7 +238,7 @@ schurdataman.cc \
 schurdataman.h
 endif
 
-libbase_la_LIBADD = @LIBS@ @SECURITY_LIBS@ $(GINACLIB_LIBS)
+libbase_la_LIBADD = @LIBS@ @SECURITY_LIBS@ @OCTAVE_LIBS@ $(GINACLIB_LIBS)
 libbase_la_LDFLAGS = -static
 
 AM_CPPFLAGS = \
